@@ -1,3 +1,8 @@
+Mon Apr 19 19:13:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (search_required): expand home relative path first.
+	  [ruby-core:29610]
+
 Mon Apr 19 12:46:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/timeout.rb (Timeout#timeout): propagate errors to the
